added -Djdk.net.URLClassPath.disableClassPathURLCheck=true in pom.xml